--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <!-- 强制PC桌面模式，禁用移动端自适应 -->
+    <meta name="viewport" content="width=1440, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>三人跑酷游戏</title>
+    <style>
+      /* 全局强制PC布局 */
+      html, body {
+        min-width: 1440px;
+        overflow-x: auto;
+      }
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
